--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container">
         <h1>Counter</h1>
-        <p class="counter">5</p>
+        <p class="counter">0</p>
         <div class="button">
-            <button id="decrease">Decrease</button>
-            <button id="reset">Reset</button>
-            <button id="increase">Increase</button>
+            <button class="btn decrease">Decrease</button>
+            <button class="btn reset">Reset</button>
+            <button class="btn increase">Increase</button>
         </div>
     </div>
     <script src="app.js"></script>
